@@ -1,5 +1,11 @@
 2002-07-14  Don Porter <dgp@users.sf.net>
 
+	* README:		Bumped HEAD to version 8.4b2 in order to 
+	* generic/tk.h:		distinguish it from the 8.4b1 release.
+	* unix/configure*:	Also extended LOCALES to cover all message
+	* unix/tk.spec:		catalogs.
+	* win/configure*:
+
 	* tests/focustTcl.test:	Conversion bug: Corrected backwards logic.
 	* tests/imgPhoto.test:	Conversion bug: overwrote unix/README.
 
